--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,10 +52,9 @@
     <string name="view_results">View Results</string>
 
 
-    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
-        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
-        InstanceID token to logcat.</string>
-    <string name="subscribe_to_news">Subscribe To News</string>
+    <string name="quickstart_message">Click the SUBSCRIBE TO Notifications button below to subscribe to our topic. Messages sent to the Notifications topic will be received.
+        </string>
+    <string name="subscribe_to_news">Subscribe To Notifications</string>
     <string name="log_token">Log Token</string>
 
     <string name="msg_subscribed">Subscribed to news topic</string>
